# First-API-FastAPI-Docker

./: MakeFile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.ps1
alembic/: README.md  env.py
alembic/versions/: f587fde311f1_init_db.py
api/: main.py  routers.py
api/atleta/: models.py
api/categorias/: models.py  schemas.py
api/centro_treinamento/: models.py  schemas.py
api/configs/: __init__.py  database.py  settings.py
api/contrib/: __init__.py  dependence.py  models.py  schemas.py
api/contrib/repository/: models.py
api/controllers/: atleta.py
api/models/: main.py
api/schemas/: __init__.py  atleta.py  main.py
